# vikenparikh.github.io

./: .gitignore  CNAME  README.md  astro.config.mjs  index with works.html  index.html  index.html.bak  index.md  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  portfolio_builder.json  sendemail.php  setup.cfg  unified_docs.json  vitest.config.ts
.github/workflows/: deploy.yml
assets/css/: font-awesome.min.css  font-awesome.min.css.bak  portfolio-site.css  style.css
assets/js/: jquery.easypiechart.js  jquery.fitvids.js  jquery.shuffle.min.js  jquery.sticky.js  scripts.js  smoothscroll.js
backend/: .dockerignore  Dockerfile  package.json  server.js  server.test.js
docs/: .unified_docs_manifest.json  index.md
docs/root/: index.md
email-templates/: simple.html
legacy_site/: Extra.txt  README.md  index.html
public/: robots.txt
scripts/: portfolio_builder.py
site/: 404.html  index.html  sitemap.xml
site/root/: index.html
site/search/: search_index.json
src/: config.ts  content.config.ts
src/__tests__/: about-contact.render.test.ts  components.render.test.ts  config.test.ts  homepage.render.test.ts
src/components/: About.astro  Contact.astro  Education.astro  Experience.astro  Footer.astro  Header.astro  Hero.astro  ProjectCard.astro  (+2 more)
tests/: about.spec.ts  education.spec.ts  experience.spec.ts  projects.spec.ts  test_portfolio_builder.py
unified_docs/: cli.py  collector.py  combiner.py  github_repos.py  portfolio_enhancer.py  site_generator.py
unified_docs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+17 files in other folders)
