[metadata]
name = unified-docs
version = 0.1.0
description = Recursive README combiner and portfolio docs generator

[options]
packages = find:
python_requires = >=3.9
install_requires =
    mkdocs
    mkdocs-material

[options.packages.find]
include =
    unified_docs

[options.entry_points]
console_scripts =
    unified-docs = unified_docs.cli:main
